src/qt/libqmetaobject.bf

	[LinkName("QMetaMethod_Invoke123")]
	public static extern bool QMetaMethod_Invoke123(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
	[LinkName("QMetaMethod_Invoke22")]
	public static extern bool QMetaMethod_Invoke22(Self* c_this, QObject* object, QGenericArgument val0);
	[LinkName("QMetaMethod_Invoke34")]
	public static extern bool QMetaMethod_Invoke34(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_Invoke44")]
	public static extern bool QMetaMethod_Invoke44(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_Invoke54")]
	public static extern bool QMetaMethod_Invoke54(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_Invoke64")]
	public static extern bool QMetaMethod_Invoke64(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_Invoke74")]
	public static extern bool QMetaMethod_Invoke74(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_Invoke84")]
	public static extern bool QMetaMethod_Invoke84(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_Invoke94")]
	public static extern bool QMetaMethod_Invoke94(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_Invoke104")]
	public static extern bool QMetaMethod_Invoke104(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
	[LinkName("QMetaMethod_Invoke114")]
	public static extern bool QMetaMethod_Invoke114(Self* c_this, QObject* object, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
	[LinkName("QMetaMethod_InvokeOnGadget3")]
	public static extern bool QMetaMethod_InvokeOnGadget3(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0);
	[LinkName("QMetaMethod_InvokeOnGadget4")]
	public static extern bool QMetaMethod_InvokeOnGadget4(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_InvokeOnGadget5")]
	public static extern bool QMetaMethod_InvokeOnGadget5(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_InvokeOnGadget6")]
	public static extern bool QMetaMethod_InvokeOnGadget6(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_InvokeOnGadget7")]
	public static extern bool QMetaMethod_InvokeOnGadget7(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_InvokeOnGadget8")]
	public static extern bool QMetaMethod_InvokeOnGadget8(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_InvokeOnGadget9")]
	public static extern bool QMetaMethod_InvokeOnGadget9(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_InvokeOnGadget10")]
	public static extern bool QMetaMethod_InvokeOnGadget10(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_InvokeOnGadget11")]
	public static extern bool QMetaMethod_InvokeOnGadget11(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
	[LinkName("QMetaMethod_InvokeOnGadget12")]
	public static extern bool QMetaMethod_InvokeOnGadget12(Self* c_this, void* gadget, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
	[LinkName("QMetaMethod_InvokeOnGadget2")]
	public static extern bool QMetaMethod_InvokeOnGadget2(Self* c_this, void* gadget, QGenericArgument val0);
	[LinkName("QMetaMethod_InvokeOnGadget32")]
	public static extern bool QMetaMethod_InvokeOnGadget32(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_InvokeOnGadget42")]
	public static extern bool QMetaMethod_InvokeOnGadget42(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_InvokeOnGadget52")]
	public static extern bool QMetaMethod_InvokeOnGadget52(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_InvokeOnGadget62")]
	public static extern bool QMetaMethod_InvokeOnGadget62(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_InvokeOnGadget72")]
	public static extern bool QMetaMethod_InvokeOnGadget72(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_InvokeOnGadget82")]
	public static extern bool QMetaMethod_InvokeOnGadget82(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_InvokeOnGadget92")]
	public static extern bool QMetaMethod_InvokeOnGadget92(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_InvokeOnGadget102")]
	public static extern bool QMetaMethod_InvokeOnGadget102(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
	[LinkName("QMetaMethod_InvokeOnGadget112")]
	public static extern bool QMetaMethod_InvokeOnGadget112(Self* c_this, void* gadget, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
}
public struct QMetaEnum
{
	[LinkName("QMetaEnum_new")]
	public static extern QMetaEnum* QMetaEnum_new(QMetaEnum* other);
	[LinkName("QMetaEnum_new2")]
	public static extern QMetaEnum* QMetaEnum_new2(QMetaEnum* other);
	[LinkName("QMetaEnum_new3")]
	public static extern QMetaEnum* QMetaEnum_new3();
	[LinkName("QMetaEnum_new4")]
	public static extern QMetaEnum* QMetaEnum_new4(QMetaEnum* param1);
	[LinkName("QMetaEnum_Name")]
	public static extern char8[] QMetaEnum_Name(Self* c_this);
	[LinkName("QMetaEnum_EnumName")]
	public static extern char8[] QMetaEnum_EnumName(Self* c_this);
	[LinkName("QMetaEnum_IsFlag")]
	public static extern bool QMetaEnum_IsFlag(Self* c_this);
	[LinkName("QMetaEnum_IsScoped")]
	public static extern bool QMetaEnum_IsScoped(Self* c_this);
	[LinkName("QMetaEnum_KeyCount")]
	public static extern int32 QMetaEnum_KeyCount(Self* c_this);
	[LinkName("QMetaEnum_Key")]
	public static extern char8[] QMetaEnum_Key(Self* c_this, int32 index);
	[LinkName("QMetaEnum_Value")]
	public static extern int32 QMetaEnum_Value(Self* c_this, int32 index);
	[LinkName("QMetaEnum_Scope")]
	public static extern char8[] QMetaEnum_Scope(Self* c_this);
	[LinkName("QMetaEnum_KeyToValue")]
	public static extern int32 QMetaEnum_KeyToValue(Self* c_this, char8[] key);
	[LinkName("QMetaEnum_ValueToKey")]
	public static extern char8[] QMetaEnum_ValueToKey(Self* c_this, int32 value);
	[LinkName("QMetaEnum_KeysToValue")]
	public static extern int32 QMetaEnum_KeysToValue(Self* c_this, char8[] keys);
	[LinkName("QMetaEnum_ValueToKeys")]
	public static extern libqt_string QMetaEnum_ValueToKeys(Self* c_this, int32 value);
	[LinkName("QMetaEnum_EnclosingMetaObject")]
	public static extern QMetaObject* QMetaEnum_EnclosingMetaObject(Self* c_this);
	[LinkName("QMetaEnum_IsValid")]
	public static extern bool QMetaEnum_IsValid(Self* c_this);
	[LinkName("QMetaEnum_KeyToValue2")]
	public static extern int32 QMetaEnum_KeyToValue2(Self* c_this, char8[] key, bool* ok);
	[LinkName("QMetaEnum_KeysToValue2")]
	public static extern int32 QMetaEnum_KeysToValue2(Self* c_this, char8[] keys, bool* ok);
}
